--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -1,6 +1,6 @@
 <!-- <h1 *ngIf="authService.user | async">Welcome {{ (authService.user | async)?.email }}!</h1> -->
 
-<div *ngIf="!(authService.user | async)">
+<!-- <div *ngIf="!(authService.user | async)">
   <input type="text" [(ngModel)]="email" placeholder="email">
   <input type="password" [(ngModel)]="password" placeholder="password">
 
@@ -11,8 +11,30 @@
   <button (click)="login()" [disabled]="!email || !password">
     Login
   </button>
-</div>
+</div> -->
+<div class="jumbotron" style="font-family:Segoe UI">
+  <h1 *ngIf="authService.user | async">
+    You are logged in.
+  </h1>
+  <div *ngIf="!(authService.user | async)">
+    <form>
+      <fieldset>
 
-<button (click)="logout()" *ngIf="authService.user | async">
-  Logout
-</button>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input name="emailInput" type="email" [(ngModel)]="email" class="form-control" id="exampleInputEmail1"
+            aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input name="passwordInput" type="password" [(ngModel)]="password" class="form-control" id="exampleInputPassword1"
+            placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="login()" [disabled]="!email || !password">Log In</button>
+        <button type="submit" class="btn btn-secondary" (click)="signup()" [disabled]="!email || !password">Sign Up</button>
+
+      </fieldset>
+    </form>
+  </div>
+</div>
