--- a/src/app/prepcs.css
+++ b/src/app/prepcs.css
@@ -5388,7 +5388,7 @@ input[type="button"].btn-block {
   height: 1rem;
   overflow: hidden;
   font-size: 0.75rem;
-  background-color: #f7f7f9;
+  background-color: #dadae3;
   border-radius: 0.4rem;
 }
 
