--- a/src/app/problems/problem-detail/problem-detail.component.html
+++ b/src/app/problems/problem-detail/problem-detail.component.html
@@ -3,7 +3,7 @@
     <iframe class="problem-iframe" [src]="problemUrlSanitized">
     </iframe>
   </div> -->
-  <div class="jumbotron" align="center" style="height:100vh; font-family:Segoe UI;">
+  <!-- <div class="jumbotron" align="center" style="height:100vh; font-family:Segoe UI;">
     <div class="card text-white bg-secondary mb-3"  >
       <div class="card-header">Miscellaneous</div>
       <div class="card-body">
@@ -18,5 +18,15 @@
     </div>
     <iframe style="width:100%; height:100%" [src]="domSanitizer.bypassSecurityTrustResourceUrl('http://tpcg.io/eskO1d')">
     </iframe>
-  </div>
+  </div> -->
+
+  <textarea rows="4" columns="200">
+  You will type code here.
+</textarea>
+
+<button (click)="submit_code()">Click to submit your code.</button>
+  <textarea rows="4" columns="200">
+    You will see the result of your submission here.
+  </textarea>
+
 </div>
