Created IDE Prototype for User Code

--- a/React_FrontEnd/prep-cs/src/index.css
+++ b/React_FrontEnd/prep-cs/src/index.css
@@ -1,3 +1,10 @@
+.demoProblem{
+  margin-left: 400px;
+  margin-top: 200px;
+  height: 500px;
+  width: 200px;
+}
+
 .homePage{
   overflow: hidden;
 }
