--- a/React_FrontEnd/prep-cs/src/index.css
+++ b/React_FrontEnd/prep-cs/src/index.css
@@ -24,17 +24,39 @@
 .problem-desc-container{
   /* width: 500px;
   height:500px; */
-  height: 100%;
+  height: 80vh;
   width: 50%;
+  /* border-style: solid;
+  border-color: black; */
   /* float: left; */
 }
 
 .ide-container{
   /* width: 500px;
   height:500px; */
-  height: 100%;
+  height: 90vh;
   width: 50%;
-  /* float: right; */
+  float: right;
+}
+
+.info-box {
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  height: 300px;
+  width: 700px;
+  margin: 30px;
+
+  position: absolute;
+  bottom: 0px;
+}
+
+.submit-button {
+  text-align: center;
+  color: black;
+  width:100%;
+  height: 50px;
+  background-color:#78C2AD ;
 }
 
 /*!
