--- a/React_FrontEnd/prep-cs/src/index.css
+++ b/React_FrontEnd/prep-cs/src/index.css
@@ -59,6 +59,14 @@
   background-color:#78C2AD ;
 }
 
+.Nav_link {
+  color: "yellow";
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  text-decoration: none;
+  width: 150px;
+}
+
 /*!
  * Bootswatch v4.3.1
  * Homepage: https://bootswatch.com
