Get first and last names on Sign Up and records in Firebase.

--- a/React_FrontEnd/prep-cs/src/App/index.css
+++ b/React_FrontEnd/prep-cs/src/App/index.css
@@ -13,6 +13,14 @@
   margin: 5px 0px;
 }
 
+.auth-box {
+  width: 50vh
+}
+
+.auth-box-input {
+  margin: 10px;
+}
+
 .homePage{
   overflow: hidden;
 }
