--- a/React_FrontEnd/prep-cs/src/App/index.css
+++ b/React_FrontEnd/prep-cs/src/App/index.css
@@ -68,7 +68,7 @@
   color: black;
   width:100%;
   height: 50px;
-  background-color:#78C2AD ;
+  background-color:#003a63 ;
 }
 
 .Nav_link {
@@ -107,8 +107,8 @@
   --white: #fff;
   --gray: #888;
   --gray-dark: #343a40;
-  --primary: #78C2AD;
-  --secondary: #F3969A;
+  --primary: #003a63;
+  --secondary: #e51937;
   --success: #56CC9D;
   --info: #6CC3D5;
   --warning: #FFCE67;
@@ -243,7 +243,7 @@ sup {
 }
 
 a {
-  color: #78C2AD;
+  color: #003a63;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2688,8 +2688,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #78C2AD;
-  border-color: #78C2AD;
+  background-color: #003a63;
+  border-color: #003a63;
 }
 
 .btn-primary:hover {
@@ -2705,8 +2705,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #78C2AD;
-  border-color: #78C2AD;
+  background-color: #003a63;
+  border-color: #003a63;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2724,8 +2724,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #F3969A;
-  border-color: #F3969A;
+  background-color: #e51937;
+  border-color: #e51937;
 }
 
 .btn-secondary:hover {
@@ -2741,8 +2741,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #F3969A;
-  border-color: #F3969A;
+  background-color: #e51937;
+  border-color: #e51937;
 }
 
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
@@ -2975,14 +2975,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #78C2AD;
-  border-color: #78C2AD;
+  color: #003a63;
+  border-color: #003a63;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #78C2AD;
-  border-color: #78C2AD;
+  background-color: #003a63;
+  border-color: #003a63;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2991,15 +2991,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #78C2AD;
+  color: #003a63;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #78C2AD;
-  border-color: #78C2AD;
+  background-color: #003a63;
+  border-color: #003a63;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -3009,14 +3009,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #F3969A;
-  border-color: #F3969A;
+  color: #e51937;
+  border-color: #e51937;
 }
 
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #F3969A;
-  border-color: #F3969A;
+  background-color: #e51937;
+  border-color: #e51937;
 }
 
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
@@ -3025,15 +3025,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #F3969A;
+  color: #e51937;
   background-color: transparent;
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #F3969A;
-  border-color: #F3969A;
+  background-color: #e51937;
+  border-color: #e51937;
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
@@ -3248,7 +3248,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #78C2AD;
+  color: #003a63;
   text-decoration: none;
 }
 
@@ -3546,13 +3546,13 @@ input[type="button"].btn-block {
 .dropdown-item:hover, .dropdown-item:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #F3969A;
+  background-color: #e51937;
 }
 
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #78C2AD;
+  background-color: #003a63;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3940,8 +3940,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #78C2AD;
-  background-color: #78C2AD;
+  border-color: #003a63;
+  background-color: #003a63;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -4006,8 +4006,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #78C2AD;
-  background-color: #78C2AD;
+  border-color: #003a63;
+  background-color: #003a63;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4240,7 +4240,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #78C2AD;
+  background-color: #003a63;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4275,7 +4275,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #78C2AD;
+  background-color: #003a63;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4313,7 +4313,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #78C2AD;
+  background-color: #003a63;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4463,7 +4463,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #78C2AD;
+  background-color: #003a63;
 }
 
 .nav-fill .nav-item {
@@ -5212,7 +5212,7 @@ input[type="button"].btn-block {
   padding: 0.75rem 1rem;
   margin-bottom: 1rem;
   list-style: none;
-  background-color: #78C2AD;
+  background-color: #003a63;
   border-radius: 0.4rem;
 }
 
@@ -5255,16 +5255,16 @@ input[type="button"].btn-block {
   margin-left: -1px;
   line-height: 1.25;
   color: #fff;
-  background-color: #78C2AD;
-  border: 1px solid #78C2AD;
+  background-color: #003a63;
+  border: 1px solid #003a63;
 }
 
 .page-link:hover {
   z-index: 2;
   color: #fff;
   text-decoration: none;
-  background-color: #F3969A;
-  border-color: #F3969A;
+  background-color: #e51937;
+  border-color: #e51937;
 }
 
 .page-link:focus {
@@ -5288,8 +5288,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #F3969A;
-  border-color: #F3969A;
+  background-color: #e51937;
+  border-color: #e51937;
 }
 
 .page-item.disabled .page-link {
@@ -5376,7 +5376,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #78C2AD;
+  background-color: #003a63;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -5392,7 +5392,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #fff;
-  background-color: #F3969A;
+  background-color: #e51937;
 }
 
 a.badge-secondary:hover, a.badge-secondary:focus {
@@ -5704,7 +5704,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #78C2AD;
+  background-color: #003a63;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5807,8 +5807,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #78C2AD;
-  border-color: #78C2AD;
+  background-color: #003a63;
+  border-color: #003a63;
 }
 
 .list-group-horizontal {
@@ -6988,7 +6988,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #78C2AD !important;
+  background-color: #003a63 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6998,7 +6998,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #F3969A !important;
+  background-color: #e51937 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -7116,11 +7116,11 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #78C2AD !important;
+  border-color: #003a63 !important;
 }
 
 .border-secondary {
-  border-color: #F3969A !important;
+  border-color: #e51937 !important;
 }
 
 .border-success {
@@ -10445,7 +10445,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #78C2AD !important;
+  color: #003a63 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10453,7 +10453,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #F3969A !important;
+  color: #e51937 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -10638,11 +10638,11 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .bg-dark {
-  background-color: #F3969A !important;
+  background-color: #e51937 !important;
 }
 
 .border-dark {
-  border-color: #F3969A !important;
+  border-color: #e51937 !important;
 }
 
 .btn {
@@ -10658,7 +10658,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-link, .btn-link:hover {
-  color: #78C2AD;
+  color: #003a63;
 }
 
 .btn-link.disabled:hover {
@@ -10666,11 +10666,11 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-outline-primary {
-  color: #78C2AD;
+  color: #003a63;
 }
 
 .btn-outline-secondary {
-  color: #F3969A;
+  color: #e51937;
 }
 
 .btn-outline-success {
@@ -10704,13 +10704,13 @@ a.text-dark:hover, a.text-dark:focus {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #78C2AD;
+  background-color: #003a63;
 }
 
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #F3969A;
+  background-color: #e51937;
 }
 
 .table-light,
@@ -10792,7 +10792,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .table .thead-dark th {
-  background-color: #78C2AD;
+  background-color: #003a63;
   border-color: rgba(0, 0, 0, 0.05);
   font-family: "Montserrat", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
@@ -10828,11 +10828,11 @@ legend {
 }
 
 .alert-primary, .alert-primary > th, .alert-primary > td {
-  background-color: #78C2AD;
+  background-color: #003a63;
 }
 
 .alert-secondary, .alert-secondary > th, .alert-secondary > td {
-  background-color: #F3969A;
+  background-color: #e51937;
 }
 
 .alert-success, .alert-success > th, .alert-success > td {
