Updated Home Page Skeleton

--- a/React_FrontEnd/prep-cs/src/App/index.css
+++ b/React_FrontEnd/prep-cs/src/App/index.css
@@ -43,6 +43,13 @@
   overflow: hidden;
 }
 
+.homeBody{
+  height: 100%;
+  width: 100%;
+  background-color: #002f43;
+  display: inline-block;
+}
+
 .problem-desc-container{
   /* width: 500px;
   height:500px; */
