--- a/React_FrontEnd/prep-cs/src/App/index.css
+++ b/React_FrontEnd/prep-cs/src/App/index.css
@@ -30,7 +30,13 @@
 }
 
 #sign-in {
-  margin: 5px 0px;
+  margin: 0px auto 5px;
+  width: 65%;
+}
+
+#password {
+  margin: 0px auto 5px;
+  width: 65%;
 }
 
 .auth-box {
