Image Gallery fixes

--- a/React_FrontEnd/prep-cs/src/App/index.css
+++ b/React_FrontEnd/prep-cs/src/App/index.css
@@ -310,6 +310,8 @@
  img {
    vertical-align: middle;
    border-style: none;
+   object-fit: cover;
+   height: calc(100vh - 95px);
  }
  
  svg {
